# nanoGPT

./: .gitignore  Makefile  README.md  pyproject.toml
appendix/: chinchilla_scaling.py  transformer_analysis.py
config/: README.md  finetune_shakespeare.py  train_gpt2.py  train_shakespeare_char.py
data/openwebtext/: prepare.py
scripts/: model.py  sample.py  train.py
