[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "datasets>=3.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "wandb>=0.19.4",
]
